# bank

./: Bank-Core-Account.html  Bank-Core-Bank.html  Bank-Core-Common.html  Bank-Core-DirectDebit.html  Bank-Core-SavingPot.html  Bank-Core-StandingOrder.html  Bank-Core.html  CNAME  bank.cabal  bank.haddock  doc-index-36.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-X.html  doc-index-Y.html  doc-index-Z.html  doc-index.html  index.html
.github/workflows/: haskell.yml
src/Bank/: Core.hs
src/Bank/Core/: Account.hs  Bank.hs  Common.hs  DirectDebit.hs  SavingPot.hs  StandingOrder.hs
